added garmon character to the game :)